# dzr

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  package.json
crates/core/: Cargo.toml
crates/core/examples/: test_albums.rs  test_flow.rs
crates/core/src/: deezer.rs  lib.rs  resolver.rs  ytsearch.rs
crates/tui/: Cargo.toml
crates/tui/examples/: smoke.rs
crates/tui/src/: app.rs  audio.rs  decode.rs  lib.rs  main.rs  ui.rs  visualizer.rs  ytdlp.rs
scripts/: fetch-ytdlp.sh  install-app.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/lib/: config.ts  deezer.ts  icons.ts  player.ts  settings.ts
src/routes/: +page.svelte
