[workspace]
resolver = "2"
members = ["crates/core", "crates/tui", "src-tauri"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
anyhow = "1"
thiserror = "1"
